# magic-rs

./: Cargo.toml  README.md
.cargo/: config.toml
libserver/: Cargo.toml  build.rs
libserver/src/: array_list.rs  byte_stream.rs  database.rs  ffi_util.rs  helper.rs  jni_util.rs  lib.rs  math.rs  network.rs  resources.rs  sc_string.rs  time_util.rs
libserver/src/logic/: avatar.rs  command.rs  home.rs  json.rs  level.rs  mod.rs  mode.rs  time.rs
libserver/src/logic/data/: mod.rs  npc.rs
libserver/src/message/: account.rs  avatar.rs  home.rs  mod.rs
